--- a/package.json
+++ b/package.json
@@ -6,18 +6,29 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "electron:build": "vue-cli-service electron:build",
+    "electron:serve": "vue-cli-service electron:serve",
+    "postinstall": "electron-builder install-app-deps",
+    "postuninstall": "electron-builder install-app-deps"
   },
+  "main": "background.js",
   "dependencies": {
+    "@types/web-bluetooth": "0.0.5",
+    "autoprefixer": "^9.7.6",
     "core-js": "^3.6.4",
     "register-service-worker": "^1.7.1",
+    "ts-is-present": "^1.1.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.1",
-    "vue-router": "^3.1.6"
+    "vue-router": "^3.1.6",
+    "vuex": "^3.1.3",
+    "vuex-module-decorators": "^0.16.1"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
+    "@types/webdriverio": "4.8.0",
     "@typescript-eslint/eslint-plugin": "^2.26.0",
     "@typescript-eslint/parser": "^2.26.0",
     "@vue/cli-plugin-babel": "~4.3.0",
@@ -30,13 +41,20 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "@vue/test-utils": "1.0.0-beta.31",
+    "electron": "^5.0.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^6.2.2",
     "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
     "typescript": "~3.8.3",
-    "vue-template-compiler": "^2.6.11"
+    "vue-cli-plugin-electron-builder": "~1.4.6",
+    "vue-cli-plugin-tailwind": "~1.2.0",
+    "vue-template-compiler": "^2.6.11",
+    "webdriverio": "4.8.0"
+  },
+  "prettier": {
+    "arrowParens": "always"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
