--- a/package.json
+++ b/package.json
@@ -14,44 +14,44 @@
   },
   "main": "background.js",
   "dependencies": {
-    "@types/web-bluetooth": "0.0.5",
-    "autoprefixer": "^9.7.6",
+    "@types/web-bluetooth": "0.0.8",
+    "autoprefixer": "^9.8.6",
     "core-js": "^3.6.4",
     "register-service-worker": "^1.7.1",
-    "ts-is-present": "^1.1.1",
-    "vue": "^2.6.11",
-    "vue-class-component": "^7.2.3",
-    "vue-property-decorator": "^8.4.1",
-    "vue-router": "^3.1.6",
-    "vuex": "^3.1.3",
+    "ts-is-present": "^1.1.5",
+    "vue": "^2.6.12",
+    "vue-class-component": "^7.2.5",
+    "vue-property-decorator": "^8.5.1",
+    "vue-router": "^3.4.3",
+    "vuex": "^3.5.1",
     "vuex-module-decorators": "^0.16.1"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.19",
-    "@types/webdriverio": "4.8.0",
-    "@typescript-eslint/eslint-plugin": "^2.26.0",
-    "@typescript-eslint/parser": "^2.26.0",
-    "@vue/cli-plugin-babel": "~4.3.0",
-    "@vue/cli-plugin-eslint": "~4.3.0",
-    "@vue/cli-plugin-pwa": "~4.3.0",
-    "@vue/cli-plugin-router": "~4.3.0",
-    "@vue/cli-plugin-typescript": "~4.3.0",
-    "@vue/cli-plugin-unit-jest": "~4.3.0",
-    "@vue/cli-service": "~4.3.0",
+    "@types/jest": "^26.0.10",
+    "@types/webdriverio": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^2.34.0",
+    "@vue/cli-plugin-babel": "^4.5.4",
+    "@vue/cli-plugin-eslint": "^4.5.4",
+    "@vue/cli-plugin-pwa": "^4.5.4",
+    "@vue/cli-plugin-router": "^4.5.4",
+    "@vue/cli-plugin-typescript": "^4.5.4",
+    "@vue/cli-plugin-unit-jest": "^4.5.4",
+    "@vue/cli-service": "^4.5.4",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^5.0.2",
-    "@vue/test-utils": "1.0.0-beta.31",
+    "@vue/eslint-config-typescript": "^5.1.0",
+    "@vue/test-utils": "^1.0.0",
     "electron": "^5.0.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^6.2.2",
     "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
-    "typescript": "~3.8.3",
-    "vue-cli-plugin-electron-builder": "~1.4.6",
-    "vue-cli-plugin-tailwind": "~1.2.0",
-    "vue-template-compiler": "^2.6.11",
-    "webdriverio": "4.8.0"
+    "typescript": "^3.9.7",
+    "vue-cli-plugin-electron-builder": "^1.4.6",
+    "vue-cli-plugin-tailwind": "^1.4.2",
+    "vue-template-compiler": "^2.6.12",
+    "webdriverio": "^4.8.0"
   },
   "prettier": {
     "arrowParens": "always"
