--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
     "ts-is-present": "^1.1.5",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.5",
-    "vue-property-decorator": "^8.5.1",
+    "vue-property-decorator": "^9.0.0",
     "vue-router": "^3.4.3",
     "vuex": "^3.5.1",
-    "vuex-module-decorators": "^0.16.1"
+    "vuex-module-decorators": "^0.17.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.10",
     "@types/webdriverio": "^5.0.0",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
-    "@typescript-eslint/parser": "^2.34.0",
+    "@typescript-eslint/parser": "^3.10.1",
     "@vue/cli-plugin-babel": "^4.5.4",
     "@vue/cli-plugin-eslint": "^4.5.4",
     "@vue/cli-plugin-pwa": "^4.5.4",
@@ -41,14 +41,15 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.1.0",
     "@vue/test-utils": "^1.0.0",
-    "electron": "^5.0.0",
-    "eslint": "^6.7.2",
+    "electron": "^10.1.0",
+    "electron-devtools-installer": "^3.1.1",
+    "eslint": "^7.7.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^6.2.2",
-    "lint-staged": "^9.5.0",
-    "prettier": "^1.19.1",
-    "typescript": "^3.9.7",
-    "vue-cli-plugin-electron-builder": "^1.4.6",
+    "lint-staged": "^10.2.13",
+    "prettier": "^2.1.1",
+    "typescript": "^4.0.2",
+    "vue-cli-plugin-electron-builder": "^2.0.0-rc.4",
     "vue-cli-plugin-tailwind": "^1.4.2",
     "vue-template-compiler": "^2.6.12",
     "webdriverio": "^4.8.0"
