--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@types/electron-devtools-installer": "^2.2.0",
     "@types/web-bluetooth": "0.0.8",
     "autoprefixer": "^9.8.6",
     "core-js": "^3.6.4",
@@ -41,13 +42,15 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.1.0",
     "@vue/test-utils": "^1.0.0",
-    "electron": "^10.1.0",
+    "electron": "^9.2.1",
     "electron-devtools-installer": "^3.1.1",
     "eslint": "^7.7.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^6.2.2",
     "lint-staged": "^10.2.13",
     "prettier": "^2.1.1",
+    "spectron": "^11.1.0",
+    "standard": "^14.3.4",
     "typescript": "^4.0.2",
     "vue-cli-plugin-electron-builder": "^2.0.0-rc.4",
     "vue-cli-plugin-tailwind": "^1.4.2",
